Fix left alignment of the App Store button

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,6 @@ nav a:hover {
 
 .main aside footer {
     padding-top: 20px;
-    text-align: center;
 }
 
 .footer-container footer {
